tests/samples/passing/13_fn_lambda.mlang
// ラムダ式を変数に束縛
let add_one |x| $x + 1$ : (i32) -> i32;
let result add_one(10);
println (i32_to_string result);

// 'fn' は 'let hoist' のシンタックスシュガー
fn factorial |n|
    if $n == 0$ {
        1
    } else {
        $n * factorial($n - 1)$
    }
: (i32) -> i32;
println (i32_to_string (factorial(5)));